# toolgenerator

./: .gitignore  DESIGN.md  README.md  pyproject.toml  pytest.ini  requirements.txt  test_cli.py  test_execution.py  test_memory.py
artifacts/: test_dataset.jsonl  test_pipeline_output.jsonl
artifacts/cli-smoke/: registry.json  tool_graph.gpickle
data/sample/: basketball.json  product_search.json  weather_lookup.json
docs/: AssessmentDescription.md
scripts/: test_graph.py  test_pipeline.py
src/toolgenerator/: __init__.py
src/toolgenerator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/toolgenerator/agents/: __init__.py  assistant_agent.py  planner_agent.py  sampler_agent.py  types.py  user_proxy_agent.py  validator_agent.py
src/toolgenerator/cli/: __init__.py  build.py  generate.py  main.py  metrics.py  validate.py
src/toolgenerator/dataset/: __init__.py  jsonl_io.py  schema.py
src/toolgenerator/execution/: __init__.py  executor.py  session_state.py
src/toolgenerator/generator/: __init__.py  conversation.py  metrics.py  pipeline.py
src/toolgenerator/graph/: __init__.py  builder.py  model.py  sampler.py
src/toolgenerator/memory/: __init__.py  interface.py  mem0_store.py
src/toolgenerator/registry/: __init__.py  loader.py  normalizer.py  registry.py
tests/: conftest.py
tests/e2e/: test_pipeline.py
tests/unit/: test_graph_sampler.py  test_memory_store.py  test_registry.py  test_validation.py
